// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`claimScopes should return a list of scopes for a given ticker 1`] = `
Object {
  "claimScopes": Object {
    "__typename": "ClaimScopesConnection",
    "nodes": Array [
      Object {
        "__typename": "ClaimScope",
        "scope": Object {
          "type": "Ticker",
          "value": "5TICKER",
        },
        "ticker": "5TICKER",
      },
    ],
  },
}
`;

exports[`claims should return all claims as there are no filters 1`] = `
Object {
  "claims": Object {
    "__typename": "ClaimsConnection",
    "nodes": Array [
      Object {
        "__typename": "Claim",
        "cddId": "0x0000000000000000000000000000000000000000000000000000000000000002",
        "expiry": null,
        "filterExpiry": "253402194600000",
        "issuanceDate": "1667934040001",
        "issuerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "jurisdiction": null,
        "lastUpdateDate": "1667934040001",
        "scope": null,
        "targetId": "0x18419537c9b814e2280d736b81f217008f7b3249c64615bb68fbb24e42c5813d",
        "type": "CustomerDueDiligence",
      },
      Object {
        "__typename": "Claim",
        "cddId": "0x0000000000000000000000000000000000000000000000000000000000000001",
        "expiry": null,
        "filterExpiry": "253402194600000",
        "issuanceDate": "1667934039501",
        "issuerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "jurisdiction": null,
        "lastUpdateDate": "1667934039501",
        "scope": null,
        "targetId": "0x5f558e6ef3e91fc8235133b365124be53cdee3fc6daf0a24caca1887cb39f4bf",
        "type": "CustomerDueDiligence",
      },
      Object {
        "__typename": "Claim",
        "cddId": "0x0000000000000000000000000000000000000000000000000000000000000001",
        "expiry": null,
        "filterExpiry": "253402194600000",
        "issuanceDate": "1667934041000",
        "issuerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "jurisdiction": null,
        "lastUpdateDate": "1667934041000",
        "scope": null,
        "targetId": "0xb91bdb42aa29ef2e36b4eff09ba7808f7f67e0248a67b409cea30dbe03a16cfb",
        "type": "CustomerDueDiligence",
      },
      Object {
        "__typename": "Claim",
        "cddId": "0x0000000000000000000000000000000000000000000000000000000000000001",
        "expiry": null,
        "filterExpiry": "253402194600000",
        "issuanceDate": "1667934044500",
        "issuerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "jurisdiction": null,
        "lastUpdateDate": "1667934044500",
        "scope": null,
        "targetId": "0x756961371a77e989b922f1573e60cdaa3e72e97c2f19adb36fbfb9986b89a083",
        "type": "CustomerDueDiligence",
      },
      Object {
        "__typename": "Claim",
        "cddId": "0x0000000000000000000000000000000000000000000000000000000000000002",
        "expiry": null,
        "filterExpiry": "253402194600000",
        "issuanceDate": "1667934045000",
        "issuerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "jurisdiction": null,
        "lastUpdateDate": "1667934045000",
        "scope": null,
        "targetId": "0xca6021e7dc8ec1fa171b2fd24e7ad9d1d75e2a913128036b0b871234ec30b5dd",
        "type": "CustomerDueDiligence",
      },
      Object {
        "__typename": "Claim",
        "cddId": "0x0000000000000000000000000000000000000000000000000000000000000001",
        "expiry": null,
        "filterExpiry": "253402194600000",
        "issuanceDate": "1667934049000",
        "issuerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "jurisdiction": null,
        "lastUpdateDate": "1667934049000",
        "scope": null,
        "targetId": "0x5ce6ea4ef8c5746f714be282a38e9fff86bf657bd743aa801abbd76d4cfbc9a2",
        "type": "CustomerDueDiligence",
      },
      Object {
        "__typename": "Claim",
        "cddId": "0x0000000000000000000000000000000000000000000000000000000000000001",
        "expiry": null,
        "filterExpiry": "253402194600000",
        "issuanceDate": "1667934050001",
        "issuerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "jurisdiction": null,
        "lastUpdateDate": "1667934050001",
        "scope": null,
        "targetId": "0x12ea80d740968fc2da495200ab22db9eb22f9bb6877ce497d3ab879047e6d690",
        "type": "CustomerDueDiligence",
      },
      Object {
        "__typename": "Claim",
        "cddId": "0x0000000000000000000000000000000000000000000000000000000000000001",
        "expiry": null,
        "filterExpiry": "253402194600000",
        "issuanceDate": "1667934051000",
        "issuerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "jurisdiction": null,
        "lastUpdateDate": "1667934051000",
        "scope": null,
        "targetId": "0x7980b4b5a362343ed4563aee132ab200ff01d43382b0f00abc31c01511dcd929",
        "type": "CustomerDueDiligence",
      },
      Object {
        "__typename": "Claim",
        "cddId": "0x0000000000000000000000000000000000000000000000000000000000000002",
        "expiry": null,
        "filterExpiry": "253402194600000",
        "issuanceDate": "1667934053001",
        "issuerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "jurisdiction": null,
        "lastUpdateDate": "1667934053001",
        "scope": null,
        "targetId": "0x9a669857009d3ebe7be1cb5c69bc5b039b28a9fb697562b3efcc1d4b7267825c",
        "type": "CustomerDueDiligence",
      },
      Object {
        "__typename": "Claim",
        "cddId": "0x0000000000000000000000000000000000000000000000000000000000000001",
        "expiry": null,
        "filterExpiry": "253402194600000",
        "issuanceDate": "1667934052500",
        "issuerId": "0x0500000000000000000000000000000000000000000000000000000000000000",
        "jurisdiction": null,
        "lastUpdateDate": "1667934052500",
        "scope": null,
        "targetId": "0xefc7149f2dd9738516545ce9d2747fb69cf799fe921043ea359beb3d09f0ee57",
        "type": "CustomerDueDiligence",
      },
    ],
    "totalCount": 44,
  },
}
`;

exports[`claims should return filtered claims 1`] = `
Object {
  "claims": Object {
    "__typename": "ClaimsConnection",
    "nodes": Array [],
    "totalCount": 0,
  },
}
`;

exports[`claims should return just total count 1`] = `
Object {
  "claims": Object {
    "__typename": "ClaimsConnection",
    "totalCount": 44,
  },
}
`;
